Fix video-detail side spacings

--- a/src/styles/pages/videos.scss
+++ b/src/styles/pages/videos.scss
@@ -15,7 +15,7 @@
 .video-detail {
   @include media-breakpoint-down(sm) {
     &__wrapper {
-      margin: 0 -20px;
+      margin: 0 -12px;
     }
   }
 
